--- a/app/src/main/res/layout/activity_alta_actividad_de_campo.xml
+++ b/app/src/main/res/layout/activity_alta_actividad_de_campo.xml
@@ -21,19 +21,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="104dp" />
+        app:layout_constraintGuide_begin="81dp" />
 
-
-    <DatePicker
-        android:id="@+id/datePicker1"
+    <EditText
+        android:id="@+id/editTextDate2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:calendarViewShown="false"
-        android:datePickerMode="spinner"
-        app:layout_constraintStart_toStartOf="@+id/guideline3"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:ems="10"
+        android:inputType="date"
+        app:layout_constraintBaseline_toBaselineOf="@+id/txtViewFecha"
+        app:layout_constraintStart_toStartOf="@+id/guideline3" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
