--- a/app/src/main/res/layout/activity_listar_actividades_de_campo.xml
+++ b/app/src/main/res/layout/activity_listar_actividades_de_campo.xml
@@ -6,4 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".ListarActividadesDeCampo">
 
+    <TextView
+        android:id="@+id/textViewLista"
+        android:layout_width="259dp"
+        android:layout_height="35dp"
+        android:focusableInTouchMode="false"
+        android:text="Actividades de campo"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textStyle="bold"
+        android:textSize="25dp"
+        tools:layout_editor_absoluteX="32dp"
+        tools:layout_editor_absoluteY="38dp" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/listRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
