--- a/app/src/main/res/layout/activity_listar_actividades_de_campo.xml
+++ b/app/src/main/res/layout/activity_listar_actividades_de_campo.xml
@@ -8,20 +8,29 @@
 
     <TextView
         android:id="@+id/textViewLista"
-        android:layout_width="259dp"
-        android:layout_height="35dp"
+        android:layout_width="270dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:focusableInTouchMode="false"
         android:text="Actividades de campo"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textSize="27dp"
         android:textStyle="bold"
-        android:textSize="25dp"
-        tools:layout_editor_absoluteX="32dp"
-        tools:layout_editor_absoluteY="38dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/listRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp" />
+        android:id="@+id/recyclerViewLista"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="1dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewLista" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
