--- a/app/src/main/res/layout/activity_alta_actividad_de_campo.xml
+++ b/app/src/main/res/layout/activity_alta_actividad_de_campo.xml
@@ -239,10 +239,10 @@
 
     <Button
         android:id="@+id/btnCargar"
-        android:layout_width="183dp"
+        android:layout_width="184dp"
         android:layout_height="50dp"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:onClick="CargarActividadDeCampo"
         android:text="Cargar"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -272,9 +272,11 @@
         android:id="@+id/btnVerActividades"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
         android:onClick="VerActividades"
         android:text="Ver actividades"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="559dp" />
+        app:layout_constraintTop_toBottomOf="@id/textView10"
+        tools:layout_editor_absoluteX="16dp" />
+    />
 </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
