--- a/app/src/main/res/layout/list_actividad.xml
+++ b/app/src/main/res/layout/list_actividad.xml
@@ -25,12 +25,12 @@
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
                 android:layout_gravity="center"
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
-                app:srcCompat="@drawable/ic_feed_black_24dp"
-                android:layout_alignParentLeft="true"/>
+                app:srcCompat="@drawable/ic_grass_black_24dp" />
             <LinearLayout
                 android:id="@+id/linearLayout"
                 android:layout_width="wrap_content"
