--- a/app/src/main/res/layout/activity_alta_actividad_de_campo.xml
+++ b/app/src/main/res/layout/activity_alta_actividad_de_campo.xml
@@ -273,10 +273,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
+        android:layout_marginEnd="8dp"
         android:onClick="VerActividades"
         android:text="Ver actividades"
-        app:layout_constraintTop_toBottomOf="@id/textView10"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintEnd_toStartOf="@+id/btnCargar"
+        app:layout_constraintTop_toBottomOf="@id/textView10" />
     />
 </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
