--- a/app/src/main/res/layout/activity_alta_actividad_de_campo.xml
+++ b/app/src/main/res/layout/activity_alta_actividad_de_campo.xml
@@ -11,7 +11,7 @@
     android:isScrollContainer="true"
     android:longClickable="true"
     android:scrollbars="vertical"
-    tools:context=".AltaActividadDeCampo">
+    tools:context=".presentacion.AltaActividadDeCampo">
 
 
         <!-- Contenido del scroll -->
