--- a/app/src/main/res/layout/activity_alta_actividad_de_campo.xml
+++ b/app/src/main/res/layout/activity_alta_actividad_de_campo.xml
@@ -139,7 +139,7 @@
         android:layout_height="22dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="24dp"
-        android:text="Seleccionar fecha..."
+        android:text="Seleccionar fecha...        *"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewLista2" />
@@ -188,7 +188,7 @@
 
         android:layout_marginTop="4dp"
         android:ems="10"
-        android:hint="Ubicacion"
+        android:hint=" Ubicacion                     *"
         android:inputType="textPersonName"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
