--- a/app/src/main/res/layout/list_actividad.xml
+++ b/app/src/main/res/layout/list_actividad.xml
@@ -47,7 +47,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="2dp"
-                    android:text="Lazaro Borghi"
+                    android:text="Resumen"
                     android:textColor="@android:color/black"
                     android:textSize="24sp"
                     android:textStyle="bold"/>
