--- a/app/src/main/res/layout/activity_alta_actividad_de_campo.xml
+++ b/app/src/main/res/layout/activity_alta_actividad_de_campo.xml
@@ -192,7 +192,16 @@
         android:inputType="textPersonName"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtEstacion" /><![CDATA[
+        app:layout_constraintTop_toBottomOf="@+id/txtEstacion" />
+
+    <TextView
+        android:id="@+id/textViewHora"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="Seleccionar hora...        *"
+        app:layout_constraintBaseline_toBaselineOf="@+id/txtViewFecha"
+        app:layout_constraintStart_toEndOf="@+id/txtViewFecha" /><![CDATA[
 
 
 
