--- a/app/src/main/res/layout/activity_listar_actividades_de_campo.xml
+++ b/app/src/main/res/layout/activity_listar_actividades_de_campo.xml
@@ -29,13 +29,14 @@
         tools:layout_editor_absoluteX="-1dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/botonAlta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
         android:backgroundTint="#8BC34A"
         android:clickable="true"
+        android:enabled="true"
         android:focusable="true"
         android:onClick="altaActividadDeCampo"
         app:backgroundTint="@color/white"
